# PetCare-Evidence-Repository

./: .gcloudignore  .gitignore  PetCare_Sprint6_Day3_Evidence_Analysis_Report.md  backend_test.py  design_guidelines.json  render.yaml
.emergent/: emergent.yml
app/: petcare-evidence
backend/: server.py
frontend/: .env  package-lock.json  package.json
manifests/: sprint-6-day-3_sha256.txt
memory/: PRD.md
petcare-evidence/: README.md
petcare-web/: package-lock.json  package.json
petcare_api/: Dockerfile  cloudbuild.yaml  main.py  requirements.txt
petcare_execution/: .env.example  .gitignore  POLICY_ADDENDUM_PH45_VERIFICATION_INDEX.md  REGISTRY.json  REGISTRY.json.sha256  REGISTRY.sha256  pytest.ini  verification_index.json
petcare_execution/evidence_output/PETCARE-PH38-CLOSURE/20260224T232331Z/snapshots/: pyproject.toml  requirements-dev.txt
petcare_execution/evidence_output/PETCARE-PH38-CLOSURE/20260224T232331Z/snapshots/.github/workflows/: ci.yml  required_checks.yml
petcare_web/: .env.example  .gitignore  Dockerfile  cloudbuild.yaml  middleware.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
scripts/: deploy_ui_gcp.sh  domain_go_live.sh  petcare_aws_production_runbook.sh  petcare_close_ep08.sh  petcare_close_ep09.sh  petcare_close_ep10.sh  petcare_close_ep11.sh  petcare_close_ep12.sh  petcare_df07_evidence_pack.sh  petcare_df07_post_deploy_verify.sh  petcare_df07_release_gate_check.sh  petcare_df08_release_workflow.sh  petcare_df09_prod_activation.sh  (+51 more)
(+3973 files in other folders)
