[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "petcare-execution"
version = "0.0.0"
description = "PetCare evidence-driven execution repository"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["TESTS"]
